comments backend and CSS finished

--- a/views/blog/edit.ejs
+++ b/views/blog/edit.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
    <h2 class="form_mainTitle">Edit blog post - <%= foundBlog.name %></h2>
@@ -26,4 +26,4 @@
    
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
