--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
    <% blogs.forEach(function(blog) { %>
@@ -17,4 +17,4 @@
    <% }); %>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
