--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
    <h2 class="form_mainTitle">Create your new blog post</h2>
@@ -25,4 +25,4 @@
    </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
