--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,16 @@ h1 {
    font-weight: bold;
 }
 
+hr {
+	border-top: 1px solid #8c8b8b;
+	margin-top: 10px;
+	margin-bottom: 0;
+}
+
+h4 {
+   text-decoration: underline;
+}
+
 .navbar-fixed-top {
    background-color: white;
    height: 70px;
@@ -33,8 +43,7 @@ h1 {
 }
 
 .buttons_showPage {
-   float: left;
-   margin: 10px 7px 0 0;
+   display: inline-block;
 }
 
 .form_center {
@@ -53,9 +62,24 @@ h1 {
    font-weight: bold;
 }
 
-#blogDescription_showPage {
+.well {
+   width: 500px;
    margin-top: 20px;
+   max-width: 85%;
+   float: none;
+   margin: 20px auto;
+}
+
+.commentText {
+   margin-bottom: 10px;
+}
+
+#blogDescription_showPage {
+   width: 1000px;
+   max-width: 85%;
    font-size: 1.1em;
+   margin: 20px auto;
+   float: none;
 }
 
 #addNewButton {
@@ -73,6 +97,14 @@ h1 {
    text-align: right;
    margin-top: 20px;
    margin-right: 10px;
+}
+
+#mainButtons_showPage {
+   text-align: center;
+}
+
+#comment_showPage {
+   margin-top: 30px;
 }
 
 
