--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -5,7 +5,7 @@
    
    <div class="row">
       <div class="form_center">
-         <form action="/blogs" method="POST">
+         <form id="new_form" action="/blogs" method="POST">
             <div class="form-group">
                <label for="blogTitle">Blog title</label>
                <input type="text" name="blog[name]" placeholder="Type blog title..." class="form-control" id="blogTitle"></input>
