--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
    	<link rel="stylesheet" href="/stylesheets/main.css">
+   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    
    <body>
