--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,13 @@
 <% include partials/header %>
 
-<div class="loginSignupForm">
+<div class="form_center">
     <h2>Login</h2>
     <form action="/login" method="POST">
         <div class="form-group">
-            <input type="text" name="username" placeholder="username" class="form-control"></input>
+            <input type="text" name="username" placeholder="username" class="form-control loginSignupInputs"></input>
         </div>
         <div class="form-group">
-            <input type="password" name="password" placeholder="password" class="form-control"></input>
+            <input type="password" name="password" placeholder="password" class="form-control loginSignupInputs"></input>
         </div>
         <button class="btn btn-danger">Login</button>
     </form>
