--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,33 +9,47 @@
    </head>
    
    <body>
-      <div class="navbar navbar-fixed-top">
-         <div class="navbar-header pull-left">
+      
+   <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="/blogs">Travel Blog <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
-         </div>
-         <div class="navbar-header pull-right" id="headerButtons">
-            <a href="/blogs/new" class="btn btn-success">New blog</a>
-            <% if (!currentUser) { %>
-               <a href="/register" class="btn btn-danger">Sign up</a>
-               <a href="/login" class="btn btn-danger">Login</a>
-            <% } else { %>
-               <a href="/logout" class="btn btn-danger">Logout</a>
-               <a id="currentUser_header"><strong>Hi <%= currentUser.username %>!</strong></a>
+            <% if (currentUser) { %>
+               <a id="currentUser_header" class="pull-right"><strong>Hi <%= currentUser.username %>!</strong></a>
             <% } %>
          </div>
+       
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right" id="headerButtons">
+               <a href="/blogs/new" class="btn btn-success">New blog</a>
+               <% if (!currentUser) { %>
+                  <a href="/register" class="btn btn-danger">Sign up</a>
+                  <a href="/login" class="btn btn-danger">Login</a>
+               <% } else { %>
+                  <a href="/logout" class="btn btn-danger">Logout</a>
+               <% } %>
+            </ul>
+         </div>
       </div>
+   </nav>
       
-      <% if (success_messages && success_messages.length > 0) { %>
-         <div class="alert alert-success" role="alert">
-               <%= success_messages %>
-         </div>
-      <% } %>
-      
-      <% if (error_messages && error_messages.length > 0) { %>
-         <div class="alert alert-danger" role="alert">
-            <%= error_messages %>
-         </div>
-      <% } %>
+   <% if (success_messages && success_messages.length > 0) { %>
+      <div class="alert alert-success" role="alert">
+            <%= success_messages %>
+      </div>
+   <% } %>
+   
+   <% if (error_messages && error_messages.length > 0) { %>
+      <div class="alert alert-danger" role="alert">
+         <%= error_messages %>
+      </div>
+   <% } %>
             
          
          
