--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,10 +21,10 @@ hr {
 }
 
 .navbar-default .navbar-brand {
-	font-size: 2em;
+	font-size: 1.8em;
 	font-weight: bold;
 	color: black;
-	padding: 0 25px; 
+	padding: 0 12px; 
 	border: none;
 	line-height: 65px;
 }
@@ -42,10 +42,12 @@ hr {
 
 .buttons_showPage {
    display: inline-block;
+   margin-top: 5px;
 }
 
 .form_center {
    text-align: center;
+   margin-bottom: 20px;
 }
 
 .form_center form {
@@ -92,13 +94,9 @@ hr {
 
 .navbar-default .navbar-toggle {
    margin-top: 15px;
-   margin-right: 25px;
+   margin-right: 12px;
    border: black solid 2px;
-   background-color: transparent !important;
-}
-
-.navbar-toggle:hover {
-  background: #fcce50 !important;
+   background-color: #fcce50 !important;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -106,14 +104,14 @@ hr {
 }
 
 #headerButtons {
-   padding-right: 25px;
-   padding-left: 25px;
+   padding-right: 12px;
+   padding-left: 12px;
 }
 
 #blogDescription_showPage {
    width: 1000px;
    max-width: 95%;
-   font-size: 1.1em;
+   font-size: 1.2em;
    margin: 20px auto;
    float: none;
 }
@@ -130,17 +128,14 @@ hr {
 
 #comment_showPage {
    margin-top: 20px;
+   font-size: 1.1em;
 }
 
 #currentUser_header {
    color: inherit;
    line-height: 65px;
-   margin-right: 15px;
+   margin-right: 9px;
    text-decoration: underline;
-}
-
-#new_form {
-   margin-bottom: 20px;
 }
 
 #navbar_username {
