--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,9 +19,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/blogs">Travel Blog <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
+            <a class="navbar-brand" href="/blogs">BlogApp <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
             <% if (currentUser) { %>
-               <a id="currentUser_header" class="pull-right"><strong>Hi <%= currentUser.username %>!</strong></a>
+               <a id="currentUser_header" class="pull-right"><strong><%= currentUser.username %>!</strong></a>
             <% } %>
          </div>
        
