--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -88,7 +88,8 @@ hr {
 
 .navbar-collapse {
    background-color: white;
-   border-top:none;
+   border-top: none;
+   box-shadow: none;
    line-height: 65px;
 }
 
